--- a/src/sample/resources/sample.fxml
+++ b/src/sample/resources/sample.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,29 +13,12 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView fx:id="todayTable" editable="true" layoutY="25.0" prefHeight="398.4" prefWidth="206.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <columns>
-                      <TableColumn fx:id="horaTodoCol" prefWidth="75.0" sortable="false" text="hora" />
-                      <TableColumn fx:id="estadoTodoCol" prefWidth="56.800018310546875" sortable="false" text="estado" />
-                      <TableColumn fx:id="tarefaTodoCol" prefWidth="180.79995727539062" sortable="false" text="tarefa" />
-                    </columns>
-                  </TableView>
+                  <TableView fx:id="todayTable" editable="true" layoutY="25.0" prefHeight="398.4" prefWidth="206.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView fx:id="calendarTable" editable="true" layoutX="93.0" layoutY="99.0" prefHeight="398.4" prefWidth="386.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <columns>
-                      <TableColumn fx:id="horaCol" prefWidth="75.0" sortable="false" text="hora" />
-                      <TableColumn fx:id="segCol" prefWidth="74.0" sortable="false" text="seg" />
-                        <TableColumn fx:id="terCol" prefWidth="74.0" sortable="false" text="ter" />
-                        <TableColumn fx:id="quaCol" prefWidth="74.0" sortable="false" text="qua" />
-                        <TableColumn fx:id="quiCol" prefWidth="74.0" sortable="false" text="qui" />
-                        <TableColumn fx:id="sexCol" prefWidth="74.0" sortable="false" text="sex" />
-                        <TableColumn fx:id="sabCol" prefWidth="74.0" sortable="false" text="sab" />
-                        <TableColumn fx:id="domCol" prefWidth="74.0" sortable="false" text="dom" />
-                    </columns>
-                  </TableView>
+                  <TableView fx:id="calendarTable" editable="true" layoutX="93.0" layoutY="99.0" prefHeight="398.4" prefWidth="386.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
         </items>
